[C-805] Fix artifact on small card (#1696)

--- a/audius-client/packages/web/src/components/card/desktop/Card.module.css
+++ b/audius-client/packages/web/src/components/card/desktop/Card.module.css
@@ -173,7 +173,6 @@
   right: 26px;
   bottom: 8px;
   width: 4px;
-  background: var(--white);
 }
 
 .iconKebabHorizontal {
@@ -208,7 +207,7 @@
   width: auto !important;
 }
 
-.statsWrapper > * {
+.statsWrapper>* {
   margin-right: auto !important;
 }
 
